--- a/ssh/config
+++ b/ssh/config
@@ -15,4 +15,5 @@ Host *
   ForwardAgent yes
   IdentityFile ~/.ssh/id_rsa
   AddKeysToAgent yes
-  UseKeychain yes
+  PubkeyAcceptedKeyTypes +ssh-rsa
+  HostKeyAlgorithms +ssh-dss,ssh-rsa
